--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>leave the leaves</title>
+  <meta name="description"
+    content="Learn why leaving the leaves is beneficial for your garden and the environment. Tips and information on sustainable leaf management.">
+
+  <title>The Leave the Leaves principle for a healthy and rich garden in the Fall and Winter</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -69,7 +72,20 @@
     </p>
 
     <p>
-      For questions and more information, interact with the custom GPT:
+      <b>Best Practices for leaving your leaves:</b>
+      While embracing the 'Leave the Leaves' approach is beneficial for the environment, it's important to balance
+      ecological practices with safety and social considerations. Leaves on sidewalks, driveways, and other hard
+      surfaces should be removed to prevent slipping hazards and to maintain cleanliness and accessibility. Furthermore,
+      we recognize that many workers depend on leaf blowing for income during autumn. To support these workers while
+      still adhering to environmental principles, consider a compromise: have leaves blown, but designate certain areas
+      of your yard, like flower beds or under trees, where leaves can be left undisturbed. This approach ensures that
+      you continue to support local workers while also creating natural habitats in parts of your garden.
+    </p>
+
+    <br>
+
+    <p>
+      For questions and more information, you can interact with this custom GPT:
       <!-- <a href="https://chat.openai.com/g/g-P3RrnJk3j-leavetheleaves">LeaveTheLeaves GPT</a>. -->
       <!-- Assuming this is the bottom of your page -->
     <div class="more-info-button">
@@ -87,7 +103,7 @@
   </main>
 
   <footer>
-    <p>Made by Raphael Sarfati based on information by the Xerces Society, the US Department of Agriculture, and other
+    <p>Made by Raphael Sarfati with acknowledgments for the Xerces Society, the US Department of Agriculture, and other
       sources</p>
   </footer>
 </body>
