--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="grid">
       <section>
         <hgroup>
-          <h2>Why You Should Leave the Leaves in Your Backyard</h2>
+          <h2>Why you should <i>leave the leaves</i> in your backyard</h2>
           <h3>"Autumn is a second spring when every leaf is a flower." - Albert Camus</h3>
         </hgroup>
         <!-- <p>'Leave the Leaves' is a principle that encourages people to leave fallen leaves on the ground during autumn. This approach is not only easier for homeowners but also beneficial for the environment. It emphasizes the importance of allowing nature to follow its course without human interference.</p> -->
