--- a/index.html
+++ b/index.html
@@ -2,24 +2,11 @@
 <html lang="en">
 
 <head>
-
-    <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0QZTR81MR1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-0QZTR81MR1');
-  </script>
-  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description"
-    content="Learn why leaving the leaves is beneficial for your garden and the environment. Tips and information on sustainable leaf management.">
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
-  <title>The Leave the Leaves principle for a healthy and rich garden in the Fall and Winter</title>
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"> -->
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <title>Leave the Leaves</title>
   <style>
     body {
       /* background: url('https://source.unsplash.com/featured/?autumn,leaves') no-repeat center center fixed; */
@@ -28,7 +15,7 @@
     }
 
     .container {
-      background-color: rgba(255, 255, 255, 0.8);
+      background-color: rgba(255, 255, 255, 0.7);
       padding: 20px;
       border-radius: 10px;
       margin-top: 20px;
@@ -66,8 +53,12 @@
     <div class="grid">
       <section>
         <hgroup>
-          <h2>Why you should <i>leave the leaves</i> in your backyard</h2>
-          <h3>"Autumn is a second spring when every leaf is a flower." - Albert Camus</h3>
+          <h2>Why you should <i>leave the leaves</i> in your backyard &#127810</h2>
+          <br><br>
+          <h3><i>- What's the Autumn?
+              <br> - A Second spring when every leaf is a flower. </i>
+            <br> &emsp; Albert Camus
+          </h3>
         </hgroup>
         <!-- <p>'Leave the Leaves' is a principle that encourages people to leave fallen leaves on the ground during autumn. This approach is not only easier for homeowners but also beneficial for the environment. It emphasizes the importance of allowing nature to follow its course without human interference.</p> -->
         <!-- <figure>
@@ -99,7 +90,7 @@
           not just beautiful but also ecologically responsible.</p>
 
         <h3>Educating and Inspiring Community Involvement</h3>
-        <p>BBeyond the ecological benefits, promoting the "Leave the Leaves" philosophy serves as an educational tool
+        <p>Beyond the ecological benefits, promoting the "Leave the Leaves" philosophy serves as an educational tool
           for the community. It encourages a shift in perspective, from viewing fallen leaves as waste to recognizing
           them as a valuable ecological resource. This change in mindset can inspire more environmentally conscious
           practices in your neighborhood, fostering a community that values and works towards preserving nature.</p>
@@ -114,19 +105,23 @@
           This approach ensures that you continue to support local workers while also creating natural habitats in parts
           of your garden.</p>
 
-        <p>
+        <br>
+
+        <h5>
           For questions and more information, you can interact with this custom GPT:
           <!-- <a href="https://chat.openai.com/g/g-P3RrnJk3j-leavetheleaves">LeaveTheLeaves GPT</a>. -->
           <!-- Assuming this is the bottom of your page -->
-        <div style="display: flex; justify-content: center;">
-          <button class="more-info-button"
-            onclick="location.href='https://chat.openai.com/g/g-P3RrnJk3j-leavetheleaves'">LeaveTheLeaves GPT</button>
-        </div>
+          <div style="display: flex; justify-content: center;">
+            <button class="more-info-button"
+              onclick="location.href='https://chat.openai.com/g/g-P3RrnJk3j-leavetheleaves'">LeaveTheLeaves GPT</button>
+          </div>
+        </h5>
+
 
         <!-- <div class="more-info-button">
-          <a href="https://chat.openai.com/g/g-P3RrnJk3j-leavetheleaves" class="button">LeaveTheLeaves</a> -->
-    </div>
-    </section>
+          <a href="https://chat.openai.com/g/g-P3RrnJk3j-leavetheleaves" class="button">LeaveTheLeaves</a>
+    </div> -->
+      </section>
     </div>
   </main>
   <footer class="container">
