--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h2>Why you should <i>leave the leaves</i> in your backyard &#127810</h2>
           <br><br>
           <h3><i>- What's the Autumn?
-              <br> - A Second spring when every leaf is a flower. </i>
+              <br> - A second Spring when every leaf is a flower. </i>
             <br> &emsp; Albert Camus
           </h3>
         </hgroup>
